# FedLearnProject

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  amc-rml2016a-updated.ipynb  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
animations/: fl_scenes.py  fl_scenes_small.py
central/: aggregator.py  byzantine.py  dashboard.py  dashboard_app.py  diagnostic.py  main.py  server.py
client/: app.py  feature_extract.py  main.py  train.py
data/: datasets.py  manager.py
static/css/: theme.css
tests/: simulate.py  test_byzantine.py  test_integration_amc.py
