[project]
name = "radiofed"
version = "1.0.0"
description = "RadioFed: Byzantine-Resilient Federated Learning for Automatic Modulation Classification"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-fasthtml>=0.12.0",
    "numpy>=1.24.0",
    "httpx>=0.25.0",
    "requests>=2.31.0",
    "scipy>=1.10.1",
    "joblib>=1.4.2",
    "scikit-learn>=1.3.2",
    "threadpoolctl>=3.5.0",
    "matplotlib>=3.7.5",
    "seaborn>=0.13.2",
    "pandas>=2.0.3",
    "manim>=0.18.0",
    "plotly>=5.18.0",
    "python-multipart>=0.0.6",
]

[project.scripts]
central-server = "central.main:main"
client = "client.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["central", "client"]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]
